--- a/package.json
+++ b/package.json
@@ -13,17 +13,23 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.104",
     "@types/jest": "^27.5.2",
-    "@types/node": "10.17.27",
+    "@types/node": "^18.7.18",
     "@types/prettier": "2.6.0",
     "aws-cdk": "2.41.0",
+    "esbuild": "^0.15.8",
     "jest": "^27.5.1",
     "ts-jest": "^27.1.4",
     "ts-node": "^10.9.1",
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.172.0",
+    "@aws-sdk/client-s3": "^3.171.0",
+    "@aws-sdk/lib-dynamodb": "^3.172.0",
     "aws-cdk-lib": "2.41.0",
     "constructs": "^10.0.0",
+    "exceljs": "^4.3.0",
+    "moment-timezone": "^0.5.37",
     "source-map-support": "^0.5.21"
   }
 }
