--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,9 @@
     "strictPropertyInitialization": false,
     "typeRoots": [
       "./node_modules/@types"
-    ]
+    ],
+    "skipLibCheck": true,
+    "outDir": "build"
   },
   "exclude": [
     "node_modules",
