--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "@middy/http-error-handler": "^3.4.0",
     "@middy/http-response-serializer": "^3.4.0",
     "aws-cdk-lib": "2.41.0",
+    "class-transformer": "^0.5.1",
     "constructs": "^10.0.0",
     "exceljs": "^4.3.0",
     "http-errors": "^2.0.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "moment-timezone": "^0.5.37",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21",
