--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@aws-sdk/client-dynamodb": "^3.172.0",
     "@aws-sdk/client-s3": "^3.171.0",
     "@aws-sdk/lib-dynamodb": "^3.172.0",
+    "@halapp/common": "^1.0.6",
     "@middy/core": "^3.4.0",
     "@middy/http-cors": "^3.4.0",
     "@middy/http-error-handler": "^3.4.0",
