--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "halapp-listing",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "bin": {
     "halapp-listing": "bin/halapp-listing.js"
   },
@@ -8,41 +8,46 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
   },
   "devDependencies": {
-    "@types/aws-lambda": "^8.10.104",
+    "@types/aws-lambda": "^8.10.109",
     "@types/http-errors": "^1.8.2",
     "@types/jest": "^27.5.2",
-    "@types/lodash": "^4.14.185",
-    "@types/node": "^18.7.18",
+    "@types/lodash": "^4.14.191",
+    "@types/node": "^18.11.18",
     "@types/prettier": "2.6.0",
-    "aws-cdk": "2.41.0",
-    "esbuild": "^0.15.8",
+    "aws-cdk": "^2.60.0",
+    "esbuild": "^0.15.18",
     "jest": "^27.5.1",
-    "ts-jest": "^27.1.4",
+    "prettier": "^2.8.3",
+    "ts-jest": "^27.1.5",
     "ts-node": "^10.9.1",
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.172.0",
-    "@aws-sdk/client-s3": "^3.171.0",
-    "@aws-sdk/lib-dynamodb": "^3.172.0",
-    "@halapp/common": "^1.0.6",
-    "@middy/core": "^3.4.0",
-    "@middy/http-cors": "^3.4.0",
-    "@middy/http-error-handler": "^3.4.0",
-    "@middy/http-response-serializer": "^3.4.0",
-    "aws-cdk-lib": "2.41.0",
+    "@aws-cdk/aws-apigatewayv2-alpha": "^2.60.0-alpha.0",
+    "@aws-cdk/aws-apigatewayv2-integrations-alpha": "^2.60.0-alpha.0",
+    "@aws-sdk/client-dynamodb": "^3.245.0",
+    "@aws-sdk/client-s3": "^3.245.0",
+    "@aws-sdk/lib-dynamodb": "^3.245.0",
+    "@halapp/common": "^1.0.9",
+    "@middy/core": "^3.6.2",
+    "@middy/http-cors": "^3.6.2",
+    "@middy/http-error-handler": "^3.6.2",
+    "@middy/http-response-serializer": "^3.6.2",
+    "aws-cdk-lib": "^2.60.0",
     "class-transformer": "^0.5.1",
-    "constructs": "^10.0.0",
+    "constructs": "^10.1.222",
     "exceljs": "^4.3.0",
     "http-errors": "^2.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
-    "moment-timezone": "^0.5.37",
+    "moment-timezone": "^0.5.40",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21",
-    "tsyringe": "^4.7.0"
+    "tsyringe": "^4.7.0",
+    "yaml": "^2.2.1"
   }
 }
